# AkiraDocs

./: .env.development  .gitignore  .lintstagedrc.json  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-Enterprise.md  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.md  tsconfig.json  turbo.json
.github/: pull_request_template.md
.github/workflows/: build.yml  lint.yml  release.yml  test.yml  update-template.yml
_content/: _config.json
_content/articles/: _meta.json  first-post.json
_content/docs/: blocks-test.json  first-post.json  index.json  introduction.json  navigation.json
_contents/: _config.json
_contents/articles/: UnderstandingQ4GGUFModelCompression.json  _meta.json  example.json
_contents/docs/: _meta.json  blocks.json
content/docs/: first-post.json
docs/: .cfignore  README.md  akiradocs.config.json  next.config.mjs  package-lock.json  package.json  tsconfig.json  wrangler.toml
docs/compiled/: manifest.json
docs/public/: sitemap.xml
docs/scripts/: compile.js  extract-docs-context.js  generate-sitemap.mjs
docs/src/: template.json
enterprise/: LICENSE.md
examples/demo/: akiradocs.config.json  next.config.mjs  package-lock.json  package.json  tsconfig.json
examples/docs/: package-lock.json  package.json  tsconfig.json
src/: template.json
src/app/: layout.tsx  (+1 more)
test/: akiradocs.config.json  package-lock.json  package.json
test/editor/backend/: pyproject.toml
test/editor/backend/app/services/: file_service.py
test/editor/backend/app/utils/: path_utils.py
(+398 files in other folders)
